updated several features, was not compiling